; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_fetchhead.c_test_online_fetchhead__empty_dst_refspec_creates_no_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_fetchhead.c_test_online_fetchhead__empty_dst_refspec_creates_no_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"refs/heads/first-merge\00", align 1
@FETCH_HEAD_EXPLICIT_DATA = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"first-merge\00", align 1
@GIT_BRANCH_ALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_online_fetchhead__empty_dst_refspec_creates_no_branch() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i64, align 8
  %3 = call i32 (...) @fetchhead_test_clone()
  %4 = call i64 (...) @count_references()
  store i64 %4, i64* %2, align 8
  %5 = load i32, i32* @FETCH_HEAD_EXPLICIT_DATA, align 4
  %6 = call i32 @fetchhead_test_fetch(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* @g_repo, align 4
  %8 = load i32, i32* @GIT_BRANCH_ALL, align 4
  %9 = call i32 @git_branch_lookup(i32** %1, i32 %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %8)
  %10 = call i32 @cl_git_fail(i32 %9)
  %11 = load i64, i64* %2, align 8
  %12 = call i64 (...) @count_references()
  %13 = call i32 @cl_assert_equal_i(i64 %11, i64 %12)
  ret void
}

declare dso_local i32 @fetchhead_test_clone(...) #1

declare dso_local i64 @count_references(...) #1

declare dso_local i32 @fetchhead_test_fetch(i8*, i32) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_branch_lookup(i32**, i32, i8*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
